some checks with auth
