# backend/docs/swagger.yaml
@@ -20,8 +20,11 @@ definitions:
         type: string
       username:
         example: Chat_User_1
+        maxLength: 20
         type: string
     required:
+    - email
+    - password
     - username
     type: object
   models.LoginUserReq:
@@ -33,6 +36,9 @@ definitions:
         example: password12345
         minLength: 8
         type: string
+    required:
+    - email
+    - password
     type: object
   util.Response:
     properties:
