# backend/internal/models/user.go
@@ -2,15 +2,15 @@ package models
 
 type User struct {
 	ID       int64  `json:"id" db:"id" validate:"omitempty" example:""`
-	Username string `json:"username" db:"username" validate:"required" example:"Chat_User_1"`
-	Email    string `json:"email" db:"email" validate:"email" example:"admin@example.com"`
-	Password string `json:"password" db:"password" validate:"min=8" example:"password12345"`
+	Username string `json:"username" db:"username" validate:"required,max=20" example:"Chat_User_1"`
+	Email    string `json:"email" db:"email" validate:"required,email" example:"admin@example.com"`
+	Password string `json:"password" db:"password" validate:"required,min=8" example:"password12345"`
 }
 
 type CreateUserReq struct {
-	Username string `json:"username" db:"username" validate:"required" example:"Chat_User_1"`
-	Email    string `json:"email" db:"email" validate:"email" example:"admin@example.com"`
-	Password string `json:"password" db:"password" validate:"min=8" example:"password12345"`
+	Username string `json:"username" db:"username" validate:"required,max=20" example:"Chat_User_1"`
+	Email    string `json:"email" db:"email" validate:"required,email" example:"admin@example.com"`
+	Password string `json:"password" db:"password" validate:"required,min=8" example:"password12345"`
 }
 
 type CreateUserRes struct {
@@ -20,8 +20,8 @@ type CreateUserRes struct {
 }
 
 type LoginUserReq struct {
-	Email    string `json:"email" db:"email" validate:"email" example:"admin@example.com"`
-	Password string `json:"password" db:"password" validate:"min=8" example:"password12345"`
+	Email    string `json:"email" db:"email" validate:"required,email" example:"admin@example.com"`
+	Password string `json:"password" db:"password" validate:"required,min=8" example:"password12345"`
 }
 
 type LoginUserRes struct {
